--- a/package.json
+++ b/package.json
@@ -12,16 +12,22 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@metamask/sdk-react": "^0.12.4",
+    "@metamask/sdk-react-ui": "^0.12.4",
     "@mui/icons-material": "^5.14.18",
     "@mui/material": "^5.14.18",
     "@reduxjs/toolkit": "^1.9.7",
+    "ethers": "^6.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.19.0",
-    "styled-components": "^6.1.1"
+    "styled-components": "^6.1.1",
+    "viem": "^1.19.7",
+    "wagmi": "^1.4.7"
   },
   "devDependencies": {
+    "@mightymeld/runtime": "^0.1.38",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
     "@typescript-eslint/eslint-plugin": "^6.10.0",
