--- a/package.json
+++ b/package.json
@@ -17,11 +17,12 @@
     "@mui/icons-material": "^5.14.18",
     "@mui/material": "^5.14.18",
     "@reduxjs/toolkit": "^1.9.7",
+    "axios": "^1.6.2",
     "ethers": "^6.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.3",
-    "react-router-dom": "^6.19.0",
+    "react-router-dom": "^6.20.0",
     "styled-components": "^6.1.1",
     "viem": "^1.19.7",
     "wagmi": "^1.4.7"
